Add basic icon legend

--- a/index.html
+++ b/index.html
@@ -10,6 +10,32 @@
 <body>
   <div id="restaurantlist">
   </div>
+  <div id="icon-key">
+    <div class="icon-info">
+      <img src="assets/takeout.svg" alt="" class="service-icon">
+      <p class="icon-title" id="takeout-key">Takeout</p>
+    </div>
+    <div class="icon-info">
+      <img src="assets/delivery.svg" alt="" class="service-icon">
+      <p class="icon-title" id="delivery-key">Delivery</p>
+    </div>
+    <div class="icon-info">
+      <img src="assets/kickback.png" alt="" class="service-icon">
+      <p class="icon-title" id="kickbackAVL-key">Kickback AVL</p>
+    </div>
+    <div class="icon-info">
+      <img src="assets/takoutcentral.png" alt="" class="service-icon">
+      <p class="icon-title" id="takeout-central-key">Takeout Central</p>
+    </div>
+    <div class="icon-info">
+      <img src="assets/chownow.png" alt="" class="service-icon">
+      <p class="icon-title" id="chow-now-key">Chow Now</p>
+    </div>
+    <div class="icon-info">
+      <img src="assets/doordash-300.png" alt="" class="service-icon">
+      <p class="icon-title" id="door-dash-key">Door Dash</p>
+    </div>
+  </div>
 
 </body>
 </html>
