Add basic flexbox header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="header">
+    <div id="header-box">
+      <h1 class="header-1">Asheville Strong</h1>
+    </div>
+    <div id="sub-header-box">
+      <a href="" class="sub-header-box__link">Asheville Indpendent Restaurant Association</a>
+      <a href="" class="sub-header-box__link">#AshevilleStrong on Twitter</a>
+    </div>
+  </div>
+
   <div id="restaurantlist">
   </div>
   <div id="icon-key">
